<resources>

    <string name="preference_file_key">co.imob.version1.PREFERENCE_FILE_KEY</string>

    <!-- App Name -->
    <string name="app_name">Real Estate App</string>

    <!-- Labels -->
    <string name="remember_me">Remember me</string>
    <string name="welcome">Welcome,</string>
    <string name="comma">, </string>
    <string name="m2">m²</string>
    <string name="currency">R$ </string>
    <string name="description">Description</string>
    <string name="beds">beds</string>
    <string name="baths">baths</string>
    <string name="alarms">sec. syst.</string>
    <string name="choose">What works better for you?</string>

    <!-- Hints -->
    <string name="name">Your Name</string>
    <string name="email">Your Email</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="hint_et_search">Searching for…</string>

    <!-- App - Introduction -->
    <string name="app_intro">Find your\ndream house\nat the best\nprice</string>
    <string name="app_sub_intro">We\'re here for every home ownership</string>
    <string name="start">Let\'s start</string>

    <!-- App - Login -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="already_user">Already an user?</string>
    <string name="not_user">Don\'t have an account?</string>

    <!-- App - Home -->
    <string name="buy">Buy now</string>
    <string name="opt1">Pay the Price</string>
    <string name="opt2">Make an Offer</string>

    <!-- Search Bar -->
    <string name="search">Search</string>
    <string name="quick_filter">Quick Filter</string>
    <string name="house">House</string>
    <string name="apartment">Apartment</string>
    <string name="land_lots">Land And Lots</string>
    <string name="garage">Garage</string>
    <string name="office">Office</string>

    <string name="popular">Popular</string>
    <string name="see_all">See All</string>

    <!-- App - More -->
    <string name="secret">**** **** ****</string>
    <!-- App - More Options -->
    <string name="personal">Personal Information</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Logout</string>
    <string name="go_back">Back</string>

    <!-- Bottom Menu -->
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="gps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
