<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="32dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:helperTextEnabled="true"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        app:startIconDrawable="@drawable/outline_vpn_key_24">

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/et_bg"
            android:drawableEnd="@drawable/ic_round_lock_24"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:paddingStart="28dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_check_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:buttonTint="@color/gray_lite"
        android:text="@string/remember_me"
        android:textColor="@color/gray_lite"
        android:textSize="10sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_next"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_orange_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>