<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_or_signup_activity_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="36dp"
        app:cardCornerRadius="36dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/et_bg"
                android:drawableEnd="@drawable/ic_round_email_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="28dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_bg"
                android:drawableEnd="@drawable/ic_round_lock_24"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingStart="28dp"
                android:paddingTop="8dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn_next"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/btn_orange_bg"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="end"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="5dp"
                    android:text="@string/not_user"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_btn_go_to_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="start"
                    android:paddingStart="5dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="5dp"
                    android:text="@string/signup"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>