<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="32dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

        <EditText
            android:id="@+id/signup_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:autofillHints="name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:helperTextEnabled="true"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <EditText
            android:id="@+id/signup_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:autofillHints="emailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:hintEnabled="false"
        app:passwordToggleDrawable="@drawable/password_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orange"
        app:startIconDrawable="@drawable/outline_vpn_key_24">

        <EditText
            android:id="@+id/signup_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/fav_color"
        app:hintEnabled="false"
        app:passwordToggleEnabled="false"
        app:startIconDrawable="@drawable/round_check_circle_24">

        <EditText
            android:id="@+id/signup_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn_next"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/signup_btn_selector"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
